--- a/src/assets/css/multiselect.css
+++ b/src/assets/css/multiselect.css
@@ -148,7 +148,7 @@ fieldset[disabled] .multiselect {
   margin-right: 10px;
   color: #fff;
   line-height: 1;
-  background: #003bb3;
+  background: #766458;
   margin-bottom: 5px;
   white-space: nowrap;
   overflow: hidden;
@@ -177,7 +177,7 @@ fieldset[disabled] .multiselect {
 }
 .multiselect__tag-icon:focus,
 .multiselect__tag-icon:hover {
-  background: #003bb3;
+  background: #766458;
 }
 .multiselect__tag-icon:focus:after,
 .multiselect__tag-icon:hover:after {
@@ -290,13 +290,13 @@ fieldset[disabled] .multiselect {
   font-size: 13px;
 }
 .multiselect__option--highlight {
-  background: #003bb3;
+  background: #766458;
   outline: none;
   color: #fff;
 }
 .multiselect__option--highlight:after {
   content: attr(data-select);
-  background: #003bb3;
+  background: #766458;
   color: #fff;
 }
 .multiselect__option--selected {
@@ -309,11 +309,11 @@ fieldset[disabled] .multiselect {
   color: silver;
 }
 .multiselect__option--selected.multiselect__option--highlight {
-  background: #003bb3;
+  background: #766458;
   color: #fff;
 }
 .multiselect__option--selected.multiselect__option--highlight:after {
-  background: #003bb3;
+  background: #766458;
   content: attr(data-deselect);
   color: #fff;
 }
